--- a/Image Alignment and Difference Analysis with OpenCV.ipynb
+++ b/Image Alignment and Difference Analysis with OpenCV.ipynb
@@ -2,10 +2,14 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 2,
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
+    "import cv2\n",
     "\n",
     "# Step 1: Load the two images\n",
     "image2 = cv2.imread(\"Bedroom/Holiday Inn - Bedroom Adjustment 2.jpg\")\n",
@@ -24,12 +28,7 @@
     "flann = cv2.FlannBasedMatcher(index_params, search_params)\n",
     "matches = flann.knnMatch(descriptors1, descriptors2, k=2)\n",
     "\n",
-    "# Apply ratio test to filter good matches\n",
-    "good_matches = []\n",
-    "for m, n in matches:\n",
-    "    if m.distance < 150 * n.distance:\n",
-    "        good_matches.append(m)\n",
-    "\n",
+    "good_matches = [m for m, n in matches if m.distance < 150 * n.distance]\n",
     "# Extract the keypoints from the good matches\n",
     "src_pts = np.float32([keypoints1[m.queryIdx].pt for m in good_matches]).reshape(-1, 1, 2)\n",
     "dst_pts = np.float32([keypoints2[m.trainIdx].pt for m in good_matches]).reshape(-1, 1, 2)\n",
@@ -77,12 +76,14 @@
     "\n",
     "# Iterate over the contours_merged list\n",
     "for x1, y1, x2, y2 in contours_merged:\n",
-    "    overlapping = False\n",
-    "    for x3, y3, x4, y4 in non_overlapping_contours:\n",
-    "        # Check if boxes overlap\n",
-    "        if x3 < x2 and x4 > x1 and y3 < y2 and y4 > y1:\n",
-    "            overlapping = False\n",
-    "            break\n",
+    "    overlapping = next(\n",
+    "        (\n",
+    "            False\n",
+    "            for x3, y3, x4, y4 in non_overlapping_contours\n",
+    "            if x3 < x2 and x4 > x1 and y3 < y2 and y4 > y1\n",
+    "        ),\n",
+    "        False,\n",
+    "    )\n",
     "    # Add the non-overlapping box to the list\n",
     "    if not overlapping:\n",
     "        non_overlapping_contours.append((x1, y1, x2, y2))\n",
@@ -97,38 +98,35 @@
     "cv2.imshow(\"Image Comparison\", combined_image)\n",
     "cv2.waitKey(0)\n",
     "cv2.destroyAllWindows()"
-   ],
-   "metadata": {
-    "collapsed": false
-   }
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "outputs": [],
-   "source": [],
    "metadata": {
     "collapsed": false
-   }
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
   "language_info": {
    "codemirror_mode": {
     "name": "ipython",
-    "version": 2
+    "version": 3
    },
    "file_extension": ".py",
    "mimetype": "text/x-python",
    "name": "python",
    "nbconvert_exporter": "python",
-   "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "pygments_lexer": "ipython3",
+   "version": "3.11.3"
   }
  },
  "nbformat": 4,
